Fix jumping of bg image of site on mobile scroll v1.2

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -32,7 +32,7 @@ body{
 }
 .body-bg {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
